# iot-monitor

./: .env.example  .gitignore  Dockerfile  README.md  cloudflare-tunnel.yml  docker-compose.yml  go2rtc.yaml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  deps.py  main.py
app/background/: tasks.py
app/models/: __init__.py  base.py  device.py  ewelink_token.py  sensor_history.py  user.py
app/routers/: admin.py  auth.py  cameras.py  devices.py  ewelink.py  nvr.py  tapo.py
app/services/: __init__.py  auth_service.py  encryption_service.py  ewelink_lan_crypto.py  ewelink_lan_service.py  ewelink_service.py  history_service.py  tapo_service.py
app/websocket/: __init__.py  manager.py
scripts/: add_battery_column.py
static/: index.html
static/js/: nvr.js
